--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
 </head>
 
 <body>
-    <p>Hello World!</p>
+    <h3>Сonversation:</h3> 
+    <p><strong>John Smith: </strong>Hello, I’m John. I don’t believe we’ve met. What’s your name?</p>
+    <p><strong>Megan Green: </strong>Nice to meet you, John. I’m Megan.</p>    
+    <p><strong>John Smith: </strong>Do you live here in New York? </p> 
+    <p><strong>Megan Green: </strong>No, I’m just visiting. I’m from London. Do you live in New York? </p> 
+    <p><strong>John Smith: </strong>No, I’m also here visiting friends. What do you think about New York? </p> 
+    <p><strong>Megan Green: </strong>It’s amazing. </p> 
 </body>
 
 </html>
