--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <p><strong>Megan Green: </strong>No, I’m just visiting. I’m from London. Do you live in New York? </p> 
     <p><strong>John Smith: </strong>No, I’m also here visiting friends. What do you think about New York? </p> 
     <p><strong>Megan Green: </strong>It’s amazing. </p> 
+
+    <p>Справились ли вы с переводом?</p>
+    <p>Did you translate the conversation?</p>
 </body>
 
 </html>
